--- a/vignettes/Rcpp-FAQ.Rmd
+++ b/vignettes/Rcpp-FAQ.Rmd
@@ -1,13 +1,12 @@
 ---
-title: |
-       | \pkg{Rcpp} FAQ
+title: \pkg{Rcpp} FAQ
 
 # Use letters for affiliations
 author:
   - name: Dirk Eddelbuettel
     affiliation: a
   - name: Romain François
-    affiliation: a
+    affiliation: b
 
 address:
   - code: a
@@ -30,14 +29,12 @@ abstract: |
 # Optional: Acknowledgements
 # acknowledgements: |
 
-numbersections: true
-
 # Optional: One or more keywords
 keywords:
   - Rcpp
-  - faq
-  - r
-  - cpp
+  - FAQ
+  - R
+  - C++
 
 # Font size of the document, values of 9pt (default), 10pt, 11pt and 12pt
 fontsize: 9pt
@@ -55,7 +52,7 @@ fontsize: 9pt
 numbersections: true
 
 # Optional: Specify the depth of section number, default is 5
-#secnumdepth: 5
+secnumdepth: 5
 
 # Optional: Bibliography
 bibliography: Rcpp
@@ -77,7 +74,7 @@ header-includes:
   
 vignette: >
   %\VignetteIndexEntry{Rcpp-faq}
-  %\VignetteKeywords{Rcpp, faq, r, cpp}
+  %\VignetteKeywords{Rcpp, FAQ, R, Cpp}
   %\VignettePackage{Rcpp}
   %\VignetteEngine{knitr::rmarkdown}
 ---
@@ -86,22 +83,24 @@ vignette: >
 
 # Getting started
 
-## How do I get started ?
+## How do I get started 
 
-If you have \pkg{Rcpp} installed, please execute the following command in \proglang{R}
-to access the introductory vignette (which is a variant of the \citet{JSS:Rcpp}
-paper) for a detailed introduction, ideally followed by at least the
-Rcpp Attributes \citep{CRAN:Rcpp:Attributes} vignette:
+If you have \pkg{Rcpp} installed, please execute the following command
+in \proglang{R} to access the introductory vignette (which is a
+variant of the \citet{JSS:Rcpp} and \citet{PeerJ:Rcpp} papers) for a
+detailed introduction, ideally followed by at least the Rcpp
+Attributes \citep{CRAN:Rcpp:Attributes} vignette:
 
 ```{r, eval=FALSE}
+vignette("Rcpp-jss-2011")
 vignette("Rcpp-introduction")
 vignette("Rcpp-attributes")
 ```
 
 If you do not have \pkg{Rcpp} installed, these documents should also be available
-whereever you found this document, \textsl{i.e.,} on every mirror of CRAN site.
+whereever you found this document, \textsl{i.e.,} on every mirror site of CRAN.
 
-## What do I need ?
+## What do I need 
 
 Obviously, \proglang{R} must be installed. \pkg{Rcpp} provides a
 \proglang{C++} API as an extension to the \proglang{R} system.  As such, it
@@ -122,7 +121,7 @@ means one needs:
 Also see the [RStudio documentation](http://www.rstudio.com/ide/docs/packages/prerequisites)
 on pre-requisites for R package development.
 
-## What compiler can I use ?
+## What compiler can I use 
 
 On almost all platforms, the GNU Compiler Collection (or `gcc`, which
 is also the name of its \proglang{C} language compiler) has to be used along
@@ -164,7 +163,7 @@ than `g++` (though `g++` 4.8 and 4.9 have caught up).
 The Intel `icc` family has also been used successfully  as its output
 files can also be combined with those from `gcc`.
 
-## What other packages are useful?
+## What other packages are useful
 
 Additional packages that we have found useful are:
 
@@ -183,7 +182,7 @@ Additional packages that we have found useful are:
   a package but it too is entirely optional.
 \end{description}
 
-## What licenses can I choose for my code?
+## What licenses can I choose for my code
 
 The \pkg{Rcpp} package is licensed under the terms of the
 [GNU GPL 2 or later](http://www.gnu.org/licenses/gpl-2.0.html), just like
@@ -209,7 +208,7 @@ be linking against.
 
 # Compiling and Linking
 
-## How do I use \pkg{Rcpp} in my package? {#make-package}
+## How do I use \pkg{Rcpp} in my package {#make-package}
 
 \pkg{Rcpp} has been specifically designed to be used by other packages.
 Making a package that uses \pkg{Rcpp} depends on the same mechanics that are
@@ -223,7 +222,7 @@ Further steps, specific to \pkg{Rcpp}, are described in a separate vignette.
 vignette("Rcpp-package")
 ```
 
-## How do I quickly prototype my code?
+## How do I quickly prototype my code
 
 There are two toolchains which can help with this:
 
@@ -312,7 +311,7 @@ the supplied code and makes it available under the selected identifier.
 Similarly, \rdoc{Rcpp}{sourceCpp} can read in a file and compile, link and load
 the code therein.
 
-## How do I convert my prototyped code to a package? {#from-inline-to-package}
+## How do I convert my prototyped code to a package {#from-inline-to-package}
 
 Since release 0.3.5 of \pkg{inline}, one can combine \faq{using-inline} and
 \faq{make-package}. See `help("package.skeleton-methods")` once
@@ -325,7 +324,7 @@ Rcpp Attributes \citep{CRAN:Rcpp:Attributes} also offers a means to convert
 functions written using Rcpp Attributes into a function via the
 \rdoc{Rdoc}{compileAttributes} function; see the vignette for details.
 
-## How do I quickly prototype my code in a package? {#using-a-package}
+## How do I quickly prototype my code in a package {#using-a-package}
 
 The simplest way may be to work directly with a package.  Changes to both the
 \proglang{R} and \proglang{C++} code can be compiled and tested from the
@@ -333,8 +332,8 @@ command line via:
 
 ```{bash, eval = FALSE}
 $ R CMD INSTALL mypkg && \
-$ Rscript --default-packages=mypkg -e \
-$         'someFunctionToTickle(3.14)'
+     Rscript --default-packages=mypkg -e \
+         'someFunctionToTickle(3.14)'
 ```
 
 This first installs the packages, and then uses the command-line tool
@@ -353,7 +352,7 @@ The example then becomes
 
 ```{bash, eval = FALSE}
 $ R CMD INSTALL mypkg && \
-$  r -l mypkg -e 'someFunctionToTickle(3.14)'
+     r -l mypkg -e 'someFunctionToTickle(3.14)'
 ```
 
 The `-l` option calls 'suppressMessages(library(mypkg))' before executing the
@@ -362,7 +361,7 @@ The `-l` option calls 'suppressMessages(library(mypkg))' before executing the
 More choice are provide by the \pkg{devtools} package, and by using
 RStudio. See the respective documentation for details.
 
-## But I want to compile my code with R CMD SHLIB! {#using-r-cmd-shlib}
+## But I want to compile my code with R CMD SHLIB {#using-r-cmd-shlib}
 
 The recommended way is to create a package and follow \faq{make-package}. The
 alternate recommendation is to use \pkg{inline} and follow \faq{using-inline}
@@ -380,7 +379,7 @@ On the Linux command-line, you can do the following:
 $ # if Rcpp older than 0.11.0
 $ export PKG_LIBS=`Rscript -e "Rcpp:::LdFlags()"`
 $ export PKG_CXXFLAGS=\
-$            `Rscript -e "Rcpp:::CxxFlags()"`
+              `Rscript -e "Rcpp:::CxxFlags()"`
 $ R CMD SHLIB myfile.cpp
 ```
 
@@ -408,7 +407,7 @@ either approach takes care of a lot of these tedious and error-prone manual
 steps.
 
 
-## But R CMD SHLIB still does not work !
+## But R CMD SHLIB still does not work 
 
 We have had reports in the past where build failures occurred when users had
 non-standard code in their `~/.Rprofile` or `Rprofile.site` (or
@@ -422,7 +421,7 @@ You may need to uncomment such non-standard code, or protect it by wrapping
 it inside `if (interactive())`, or possibly try to use 
 `Rscript --vanilla` instead of plain `Rscript`.
 
-## What about `LinkingTo `?
+## What about `LinkingTo `
 
 \proglang{R} has only limited support for cross-package linkage.
 
@@ -442,11 +441,11 @@ An important change arrive with \pkg{Rcpp} release 0.11.0 and concern the
 automatic registration of functions; see Section~\ref{function-registration} below.
 
 
-## Does \pkg{Rcpp} work on windows?
+## Does \pkg{Rcpp} work on windows
 
 Yes of course. See the Windows binaries provided by CRAN.
 
-## Can I use \pkg{Rcpp} with Visual Studio?
+## Can I use \pkg{Rcpp} with Visual Studio
 
 Not a chance.
 
@@ -456,7 +455,7 @@ Studio simply do not get along. As \pkg{Rcpp} is all about extending
 toolchain.  And \proglang{R} simply does not compile with Visual Studio. Go
 complain to its vendor if you are still upset.
 
-## I am having problems building Rcpp on macOS, any help ? {#q:OSX}
+## I am having problems building Rcpp on macOS, any help  {#q:OSX}
 
 There are three known issues regarding Rcpp build problems on macOS.  If you are
 building packages with RcppArmadillo, there is yet another issue that is
@@ -501,7 +500,7 @@ use \proglang{OpenMP}.
 To setup the appropriate protection for using \proglang{OpenMP}, the process
 is two-fold. First, protect the inclusion of headers with:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #ifdef _OPENMP
   #include <omp.h>
 #endif
@@ -509,7 +508,7 @@ is two-fold. First, protect the inclusion of headers with:
 
 Second, when parallelizing portions of code use:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #ifdef _OPENMP
     // multithreaded OpenMP version of code
 #else
@@ -548,26 +547,27 @@ The \textsl{Snow Leopard} release already comes with Xcode 3.2.x and work as
 is.
 -->
 
-## Does \pkg{Rcpp} work on solaris/suncc?
+## Does \pkg{Rcpp} work on solaris/suncc
 
 Yes, it generally does.  But as we do not have access to such systems, some
 issues persist on the CRAN test systems.
 
-## Does \pkg{Rcpp} work with Revolution R?
+## Does \pkg{Rcpp} work with Revolution R
 
 We have not tested it yet. \pkg{Rcpp} might need a few tweaks to work
 with the compilers used by Revolution R (if those differ from the defaults).
 
-## Is it related to CXXR?
+## Is it related to Rho (formerly CXXR)
 
-CXXR is an ambitious project that aims to totally refactor the \proglang{R}
-interpreter in \proglang{C++}. There are a few similaritites with \pkg{Rcpp}
-but the projects are unrelated.
+Rho, previously known as CXXR, is an ambitious project that aims to
+totally refactor the \proglang{R} interpreter in \proglang{C++}. There
+are a few similaritites with \pkg{Rcpp} but the projects are
+unrelated.
 
-CXXR and \pkg{Rcpp} both want \proglang{R} to make more use of \proglang{C++}
+Rho / CXXR and \pkg{Rcpp} both want \proglang{R} to make more use of \proglang{C++}
 but they do it in very different ways.
 
-## How do I quickly prototype my code using Attributes? {#prototype-using-attributes}
+## How do I quickly prototype my code using Attributes {#prototype-using-attributes}
 
 \pkg{Rcpp} version 0.10.0 and later offer a new feature 'Rcpp Attributes'
 which is described in detail in its own vignette
@@ -576,7 +576,7 @@ which is described in detail in its own vignette
 \rdoc{Rcpp}{cxxfunction} function.
 
 
-## What about the new 'no-linking' feature?? {#function-registration}
+## What about the new 'no-linking' feature {#function-registration}
 
 Starting with \pkg{Rcpp} 0.11.0, functionality provided by \pkg{Rcpp} and
 used by packages built with \pkg{Rcpp} accessed via the registration facility
@@ -598,14 +598,11 @@ But for most packages using \pkg{Rcpp}, only two things are required:
 The name of the symbol does not really matter; once one symbol is imported all
 symbols should be available.
 
-## I am having problems building RcppArmadillo on macOS, any help ? {#q:OSXArma}
+## I am having problems building RcppArmadillo on macOS, any help  {#q:OSXArma}
 
 Odds are your build failures are due to the absence of `gfortran`
-and its associated libraries. The errors that you may receive are related to either:
-
-\begin{center}
-\textbf{``-lgfortran''} or \textbf{``-lquadmath''}
-\end{center}
+and its associated libraries. The errors that you may receive are related to either
+`-lgfortran` or `-lquadmath`.
 
 To rectify the root of these errors, there are two options available. The first
 option is to download and use a fixed set of `gfortran` binaries that are
@@ -631,7 +628,7 @@ Several dozen fully documented examples are provided at the
 [Rcpp Gallery](http://gallery.rcpp.org) -- which is also open for new contributions.
 
 
-## Can I use templates with \pkg{Rcpp}?
+## Can I use templates with \pkg{Rcpp}
 
 > I'm curious whether one can provide a class definition inline in an R
 > script and then initialize an instance of the class and call a method on
@@ -643,8 +640,7 @@ what we show below.
 
 
 ### Using inline with Templated Code
-
-\noindent Most certainly, consider this simple example of a templated class
+Most certainly, consider this simple example of a templated class
 which squares its argument:
 
 ```{r, eval = FALSE}
@@ -682,7 +678,7 @@ in \faq{using-attributes} and \faq{prototype-using-attributes} above. Simply
 place the following code into a file and use \rdoc{Rcpp}{sourceCpp} on it. It
 will even run the R part at the end.
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include <Rcpp.h>
 
 template <typename T> class square :
@@ -707,7 +703,8 @@ fun(2.2, 3L)
 */
 ```
 
-## Can I do matrix algebra with \pkg{Rcpp}? {#matrix-algebra}
+## Can I do matrix algebra with Rcpp {#matrix-algebra}
+
 
 > \pkg{Rcpp} allows element-wise operations on vector and matrices through
 > operator overloading and STL interface, but what if I want to multiply a
@@ -778,7 +775,7 @@ It should be noted that code below depends on the version `0.3.5` of
 
 We can also write the same example for use with Rcpp Attributes:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include <RcppArmadillo.h>
 
 // [[Rcpp::depends(RcppArmadillo)]]
@@ -806,7 +803,7 @@ Note how we do not have to concern ourselves with conversion; R object
 automatically become (Rcpp)Armadillo objects and we can focus on the single
 computing a (scalar) result.
 
-## Can I use code from the Rmath header and library with \pkg{Rcpp}?
+## Can I use code from the Rmath header and library with \pkg{Rcpp}
 
 > Can I call functions defined in the Rmath header file and the
 > standalone math library for R--as for example the random number generators?
@@ -838,8 +835,7 @@ Using Rcpp Attributes, this can be as simple as
 
 ```{r, eval = FALSE}
 cppFunction('Rcpp::NumericVector ff(int n) { 
-              return rnorm(n, 0, 100); 
-            }')
+              return rnorm(n, 0, 100);  }')
 set.seed(42)
 ff(5)
 ff(5)
@@ -852,7 +848,7 @@ This illustrates the Rcpp Attributes adds the required `RNGScope` object
 for us. It also shows how setting the seed from R affects draws done via C++
 as well as R, and that identical random number draws are obtained.
 
-## Can I use `NA` and `Inf` with \pkg{Rcpp}?
+## Can I use `NA` and `Inf` with \pkg{Rcpp}
 
 > R knows about `NA` and `Inf`. How do I use them from C++?
 
@@ -871,7 +867,7 @@ fun()
 
 Similarly, for Rcpp Attributes:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include <Rcpp.h>
 
 // [[Rcpp::export]]
@@ -885,7 +881,7 @@ Rcpp::NumericVector fun(void) {
 }
 ```
 
-## Can I easily multiply matrices?
+## Can I easily multiply matrices
 
 > Can I multiply matrices easily?
 
@@ -920,7 +916,7 @@ The \pkg{RcppEigen} package provides an alternative using the
 
 Rcpp Attributes, once again, makes this even easier:
 
-```{Rcpp, eval = FALSE}
+```cpp
 
 #include <RcppArmadillo.h>
 
@@ -941,7 +937,7 @@ mult(A,B)
 which can be built, and run, from R via a simple \rdoc{Rcpp}{sourceCpp}
 call---and will also run the small R example at the end.
 
-## How do I write a plugin for \pkg{inline} and/or Rcpp Attributes?
+## How do I write a plugin for \pkg{inline} and/or Rcpp Attributes
 
 > How can I create my own plugin for use by the \pkg{inline} package?
 
@@ -979,7 +975,7 @@ plugin 'plug' which is then registered, and subsequently used by \pkg{inline}.
 
 The same plugins can be used by Rcpp Attributes as well.
 
-## How can I pass one additional flag to the compiler?
+## How can I pass one additional flag to the compiler
 
 > How can I pass another flag to the `g++` compiler without writing a new plugin?
 
@@ -1004,7 +1000,7 @@ f()
 For Rcpp Attributes, the attributes `Rcpp::plugin()` can be
 used. Currently supported plugins are for C++11 as well as for OpenMP.
 
-## How can I set matrix row and column names?
+## How can I set matrix row and column names
 
 > Ok, I can create a matrix, but how do I set its row and columns names?
 
@@ -1032,7 +1028,7 @@ fun()
 
 The same logic, but used with Rcpp Attributes:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include <Rcpp.h>
 
 // [[Rcpp::export]]
@@ -1049,7 +1045,7 @@ Rcpp::List fun(void) {
 }
 ```
 
-## Why can long long types not be cast correctly?
+## Why can long long types not be cast correctly
 
 That is a good and open question. We rely on the basic \proglang{R} types,
 notably `integer` and `numeric`.  These can be cast to and from
@@ -1086,7 +1082,7 @@ fit into `integer` types, up to 53 bit precision fits into
 for example from the [GNU Multiple Precision Arithmetic Library](http://gmplib.org/)
 may be an alternative.
 
-## What LaTeX packages do I need to typeset the vignettes?
+## What LaTeX packages do I need to typeset the vignettes
 
 > I would like to typeset the vignettes. What do I need?
 
@@ -1111,9 +1107,9 @@ Specific per-platform notes:
     texlive-latex-extra`.  Using `texlive-full` may be a shortcut.
   Fedora and other distributions should have similar packages.
 
-## Why is there a limit of 20 on some constructors?
+## Why is there a limit of 20 on some constructors
 
-> Ok, I would like to pass $N$ object but you only allow 20. How come?}
+> Ok, I would like to pass $N$ object but you only allow 20. How come?
 
 In essence, and in order to be able to compile it with the largest number of
 compilers, \pkg{Rcpp} is constrained by the older C++ standards which do not
@@ -1127,7 +1123,7 @@ concering data.frame creation with \pkg{Rcpp}. One solution offers a custom
 `ListBuilder` class to circumvent the limit; another suggests to simply
 nest lists.
 
-## Can I use default function parameters with \pkg{Rcpp}?
+## Can I use default function parameters with \pkg{Rcpp}
 
 Yes, you can use default parameters with _some_ limitations.
 The limitations are mainly related to string literals and empty vectors.
@@ -1137,8 +1133,7 @@ This is what is currently supported:
 - Integer and Decimal numeric values (e.g. `10` or `4.5`)
 - Pre-defined constants including:
     - Booleans: `true` and `false`
-    - Null Values: `R_NilValue`, `NA_STRING`,
-`NA_INTEGER`, `NA_REAL`, and `NA_LOGICAL`.
+    - Null Values: `R_NilValue`, `NA_STRING`, `NA_INTEGER`, `NA_REAL`, and `NA_LOGICAL`.
 - Selected vector types can be instantiated using the empty form of the
   `::create` static member function.
     - `CharacterVector`, `IntegerVector`, and `NumericVector`
@@ -1147,9 +1142,9 @@ This is what is currently supported:
     - `CharacterMatrix`, `IntegerMatrix`, and `NumericMatrix`
 
 To illustrate, please consider the following example that provides a short
-how to:
+how-to:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include <Rcpp.h>
 
 // [[Rcpp::export]]
@@ -1178,7 +1173,7 @@ sample_defaults(bias = FALSE,     # supply bool
 Note: In `cpp`, the default `bool` values are `true` and
 `false` whereas in R the valid types are `TRUE` or `FALSE`.
 
-## Can I use C++11, C++14, C++17, ... with \pkg{Rcpp}?
+## Can I use C++11, C++14, C++17, ... with \pkg{Rcpp}
 
 But of course.  In a nutshell, this boils down to \emph{what your compiler
   supports}, and also \emph{what R supports}.  We expanded a little on this in
@@ -1205,7 +1200,7 @@ support from `src/Makevars`:
 
 # Support
 
-## Is the API documented?
+## Is the API documented
 
 You bet. We use \proglang{doxygen} to generate html, latex and man page
 documentation from the source. The html documentation is available for
@@ -1216,7 +1211,7 @@ and all three formats are also available a zip-archives:
 [latex](http://dirk.eddelbuettel.com/code/rcpp/rcpp-doc-latex.zip), and
 [man](http://dirk.eddelbuettel.com/code/rcpp/rcpp-doc-man.zip).
 
-## Does it really work?
+## Does it really work
 
 We take quality seriously and have developped an extensive unit test suite to
 cover many possible uses of the \pkg{Rcpp} API.
@@ -1224,7 +1219,7 @@ cover many possible uses of the \pkg{Rcpp} API.
 We are always on the look for more coverage in our testing. Please let us know
 if something has not been tested enough.
 
-## Where can I ask further questions?
+## Where can I ask further questions
 
 The
 [Rcpp-devel](https://lists.r-forge.r-project.org/cgi-bin/mailman/listinfo/rcpp-devel)
@@ -1233,7 +1228,7 @@ to look at the list archives to see if your question has been asked before.
 
 You can also use [StackOverflow via its 'rcpp' tag](http://stackoverflow.com/questions/tagged/rcpp).
 
-## Where can I read old questions and answers?
+## Where can I read old questions and answers
 
 The normal [Rcpp-devel](https://lists.r-forge.r-project.org/cgi-bin/mailman/listinfo/rcpp-devel)
 mailing list hosting at R-forge contains an archive, which can be
@@ -1244,7 +1239,7 @@ Alternatively, one can also use
 [Mail-Archive on Rcpp-devel](http://www.mail-archive.com/rcpp-devel@lists.r-forge.r-project.org/info.html)
 both of which offer web-based interfaces, including searching.
 
-## I like it. How can I help? {#helping}
+## I like it. How can I help {#helping}
 
 We maintain a list of
 [open issues in the Github repository](https://github.com/RcppCore/Rcpp/issues?state=open).
@@ -1261,21 +1256,21 @@ it, or get the word out otherwise.
 Last but not least the [Rcpp Gallery](http://gallery.rcpp.org) is open
 for user contributions.
 
-## I don't like it. How can I help? {#dont-like-help}
+## I don't like it. How can I help {#dont-like-help}
 
 It is very generous of you to still want to help. Perhaps you can tell us
 what it is that you dislike. We are very open to \emph{constructive} criticism.
 
-## Can I have commercial support for \pkg{Rcpp}?
+## Can I have commercial support for \pkg{Rcpp}
 
 Sure you can. Just send us an email, and we will be happy to discuss the
 request.
 
-## I want to learn quickly. Do you provide training courses?
+## I want to learn quickly. Do you provide training courses
 
 Yes. Just send us an email.
 
-## Where is the code repository?
+## Where is the code repository
 
 From late 2008 to late 2013, we used the
 [Subversion repository at R-Forge](https://r-forge.r-project.org/scm/?group_id=155)
@@ -1312,7 +1307,7 @@ model. The foremost consequence within this paradigm is that pass by value is
 really a pass by reference. In essence, the distinction between the following
 two functions is only visual sugar:
 
-```{Rcpp, eval = FALSE}
+```cpp
 void implicit_ref(NumericVector X);
 void explicit_ref(NumericVector& X);
 ```
@@ -1323,7 +1318,7 @@ As a result, the \pkg{Rcpp} object is ``linked'' to the original \proglang{R} ob
 Thus, if an operation is performed on the \pkg{Rcpp} object, such as adding 1
 to each element, the operation also updates the \proglang{R} object causing the change to be propagated to \proglang{R}'s interactive environment.
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include<Rcpp.h>
 
 // [[Rcpp::export]]
@@ -1336,6 +1331,8 @@ void explicit_ref(Rcpp::NumericVector& X) {
    X = X + 1.0;
 }
 ```
+
+R use:
 
 ```{r, eval = FALSE}
 a <- 1.5:4.5
@@ -1361,7 +1358,7 @@ and, thus, there would _not_ be a link between the \pkg{Rcpp} object
 and \proglang{R} object. So, any changes in \proglang{C++} would not be propagated to
 \proglang{R} unless otherwise specified.
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include<Rcpp.h>
 
 // [[Rcpp::export]]
@@ -1374,6 +1371,8 @@ void num_vec_type(Rcpp::NumericVector X) {
    X = X + 1.0;
 }
 ```
+
+R use:
 
 ```{r, eval=FALSE}
 a <- 1:5
@@ -1395,7 +1394,7 @@ would be allowed to be modified by the compiler and, thus, modifying the initial
 `SEXP` object. Therefore, the initially secure \proglang{R} object would be altered.
 To illustrate this phenomenon, consider the following scenario:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include <Rcpp.h>
 
 // [[Rcpp::export]]
@@ -1410,6 +1409,8 @@ Rcpp::NumericVector const_override_ex(
   return X;                 // Return old object
 }
 ```
+
+R use:
 
 ```{r, eval=FALSE}
 x <- 1:10
@@ -1431,7 +1432,7 @@ into it. This is typically what is needed when working with
 `Rcpp::internal::string_proxy` class. Within the following code snippet,
 the aforementioned approach is emphasized:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include<Rcpp.h>
 
 // [[Rcpp::export]]
@@ -1478,7 +1479,7 @@ is cast into the appropriate \pkg{Rcpp} object type. Therefore, if a
 via `operator=`, then the resulting `Vector` would have a length of
 1. See the following code snippet for the aforementioned behavior.
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include<Rcpp.h>
 
 // [[Rcpp::export]]
@@ -1496,6 +1497,8 @@ void vec_scalar_assign(int n, double fill_val) {
 }
 ```
 
+R use:
+
 ```{r, eval=FALSE}
 vec_scalar_assign(5L, 3.14)
 ```
@@ -1507,7 +1510,7 @@ results while attempting to use the assignment operator with a scalar. In
 particular, the scalar will be coerced into a square `Matrix` and then
 assigned. For an example of this behavior, consider the following code:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include<Rcpp.h>
 
 // [[Rcpp::export]]
@@ -1524,6 +1527,8 @@ void mat_scalar_assign(int n, double fill_val) {
       std::endl << X << std::endl;
 }
 ```
+
+R use:
 
 ```{r, eval=FALSE}
 mat_scalar_assign(2L, 3.0)
@@ -1553,7 +1558,7 @@ by \pkg{Rcpp} attributes. This is engaged by adding
 For diagnostic and illustrativative purposes, consider the following code
 which checks to see if `R_xlen_t` is available on your platform:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include <Rcpp.h>
 // Force compilation mode to C++11
 // [[Rcpp::plugins(cpp11)]]
@@ -1567,6 +1572,8 @@ bool test_long_vector_support() {
 #endif
 }
 ```
+
+R use:
 
 ```{r, eval = FALSE}
 test_long_vector_support()
@@ -1604,7 +1611,7 @@ type. Though, sorting is slightly problematic due to locale as explained in the
 next entry. In the interim, the following code example illustrates the preferred
 approach alongside the problematic STL approach:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include <Rcpp.h>
 
 // [[Rcpp::export]]
@@ -1627,6 +1634,8 @@ Rcpp::CharacterVector stl_sort(
   return y;
 }
 ```
+
+R use:
 
 ```{r, eval=FALSE}
 set.seed(123)
@@ -1655,7 +1664,7 @@ capitalized words are sorted together followed by the sorting of lowercase
 words instead of a mixture of capitalized and lowercase words. The issue is
 illustrated by the following code example:
 
-```{Rcpp, eval = FALSE}
+```cpp
 #include <Rcpp.h>
 
 // [[Rcpp::export]]
@@ -1666,9 +1675,12 @@ Rcpp::CharacterVector rcpp_sort(
 }
 ```
 
+R use:
+
 ```{r, eval=FALSE}
 x <- c("B", "b", "c", "A", "a")
 sort(x)
 rcpp_sort(x)
 ```
 
+\newpage
